[package]
name = "common_library"
version = "0.1.0"
authors = ["kawaji <kawaji.r.333@gmail.com>"]
edition = "2021"
description = "A collection of common Rust libraries and utilities to streamline development and promote code reuse."
license = "MIT"

[dependencies]
headless_chrome = "1.0.10"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde_json = "1.0.117"
toml = "0.8.14"

[lib]
name = "common_library"
path = "src/lib.rs"
